put method in swagger
